--- a/android/app/src/main/res/drawable/launch_background.xml
+++ b/android/app/src/main/res/drawable/launch_background.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Modify this file to customize your launch splash screen -->
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@android:color/white" />
+    <item android:drawable="@drawable/bg_splash" />
 
     <!-- You can insert your own image assets here -->
     <item
-        android:width="160dp"
-        android:height="120dp"
+        android:width="200dp"
+        android:height="200dp"
         android:drawable="@drawable/app_splash_logo"
         android:gravity="center"/>
 </layer-list>
